; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_multivar.c_test_config_multivar__add_new.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_multivar.c_test_config_multivar__add_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"a.brand.new\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"config/config11\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"$^\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"variable\00", align 1
@cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_multivar__add_new() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %4 = call i32 @git_config_open_ondisk(i32** %2, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = load i8*, i8** %1, align 8
  %8 = call i32 @git_config_set_multivar(i32* %6, i8* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0))
  %9 = call i32 @cl_git_pass(i32 %8)
  store i32 0, i32* %3, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = load i8*, i8** %1, align 8
  %12 = load i32, i32* @cb, align 4
  %13 = call i32 @git_config_get_multivar_foreach(i32* %10, i8* %11, i32* null, i32 %12, i32* %3)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @cl_assert_equal_i(i32 %15, i32 1)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @git_config_free(i32* %17)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32**, i8*) #1

declare dso_local i32 @git_config_set_multivar(i32*, i8*, i8*, i8*) #1

declare dso_local i32 @git_config_get_multivar_foreach(i32*, i8*, i32*, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_config_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
